--- a/2Car/src/main/resources/db.properties
+++ b/2Car/src/main/resources/db.properties
@@ -1,6 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=mysql:jdbc://119.23.75.180:3306/Car
-jdbc.url=jdbc:mysql://119.23.75.180:3306/Car
+jdbc.url=jdbc:mysql://localhost:3306/Car
 jdbc.username=root
 jdbc.password=1234
 
