--- a/Second_Car/pom.xml
+++ b/Second_Car/pom.xml
@@ -8,7 +8,6 @@
   
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <url>http://maven.apache.org</url>
   
   <properties>
   		<!-- 统一编码 -->
@@ -78,7 +77,7 @@
       <version>5.1.38</version>
     </dependency>
     
-    <!-- oracle -->
+    <!-- oralce -->
    <dependency>    
         <groupId>com.oracle</groupId>    
         <artifactId>ojdbc6</artifactId>    
