--- a/Second_Car/src/main/resources/jdbc.properties
+++ b/Second_Car/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
-#jdbc.driverClass=oracle.jdbc.driver.OracleDriver
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/Car
+#jdbc.driverClass=oracle.jdbc.driver.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
+jdbc.url=jdbc:mysql://119.23.75.180:3306/Car
 jdbc.username=root
-jdbc.password=****
+jdbc.password=1234
