--- a/Second_Car/src/main/resources/jdbc.properties
+++ b/Second_Car/src/main/resources/jdbc.properties
@@ -2,5 +2,5 @@ jdbc.driverClass=com.mysql.jdbc.Driver
 #jdbc.driverClass=oracle.jdbc.driver.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
 jdbc.url=jdbc:mysql://119.23.75.180:3306/Car
-jdbc.username=root
-jdbc.password=1234
+jdbc.username=Ov4j7fKiCzY=
+jdbc.password=7tWO84YREGY=
