--- a/Second_Car/pom.xml
+++ b/Second_Car/pom.xml
@@ -63,6 +63,13 @@
 		<version>${struts.version}</version>
 	</dependency>
 	
+	<!-- struts与json集成的依赖 -->
+	<dependency>
+	    <groupId>org.apache.struts</groupId>
+	    <artifactId>struts2-json-plugin</artifactId>
+	    <version>2.5.14.1</version>
+	</dependency>
+	
 	<!-- Hibernate核心依赖 -->
 	<dependency>
 		<groupId>org.hibernate</groupId>
