--- a/Second_Car/pom.xml
+++ b/Second_Car/pom.xml
@@ -77,6 +77,12 @@
 		<version>${hibernate.version}</version>
 	</dependency>
 	
+	<!-- hibernate-ehcache.jar -->
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-ehcache</artifactId>
+		<version>${hibernate.version}</version>
+	</dependency>
 	<!-- MySQl -->
 	<dependency>
       <groupId>mysql</groupId>
