--- a/Second_Car/src/main/resources/jdbc.properties
+++ b/Second_Car/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://119.23.75.180:3306/Car
+jdbc.url=jdbc:mysql://119.23.75.180:3306/Car?useUnicode=true&characterEncoding=utf8
 jdbc.username=Ov4j7fKiCzY=
-jdbc.password=7tWO84YREGY=
+jdbc.password=7tWO84YREGY\=
